--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
         <h2>My projects</h2>
     </section>
     <section class="section">
+        <h2>Certifications</h2>
+    </section>
+    <section class="section">
         <h2>Contact me</h2>
     </section>
 
